Bug 1425521 - Wrap JsTerm in a React component in new frontend; r=bgrins.
MozReview-Commit-ID: GGq6ZB760d9

UltraBlame original commit: 18c6e8809c2bbcf0a96b5c11d86f5105d0754d4a

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -1881,18 +1881,6 @@ position
 ;
 }
 html
-#
-jsterm
--
-wrapper
-html
-.
-jsterm
--
-stack
--
-node
-html
 .
 jsterm
 -
@@ -2083,19 +2071,6 @@ color
 :
 #
 e0e0e0
-;
-}
-html
-.
-jsterm
--
-stack
--
-node
-{
-position
-:
-relative
 ;
 }
 textarea
@@ -2310,6 +2285,68 @@ radius
 0
 4px
 4px
+;
+}
+:
+root
+[
+platform
+=
+"
+mac
+"
+]
+.
+sidebar
+~
+.
+jsterm
+-
+input
+-
+container
+textarea
+.
+jsterm
+-
+input
+-
+node
+:
+root
+[
+platform
+=
+"
+mac
+"
+]
+.
+sidebar
+~
+.
+jsterm
+-
+input
+-
+container
+textarea
+.
+jsterm
+-
+complete
+-
+node
+{
+border
+-
+bottom
+-
+right
+-
+radius
+:
+0
 ;
 }
 textbox
@@ -6237,7 +6274,11 @@ template
 -
 columns
 :
+minmax
+(
+200px
 1fr
+)
 auto
 ;
 grid
@@ -6248,6 +6289,8 @@ rows
 :
 auto
 1fr
+auto
+auto
 ;
 height
 :
@@ -6257,6 +6300,76 @@ height
 width
 :
 100vw
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+#
+webconsole
+-
+notificationbox
+{
+grid
+-
+column
+:
+1
+/
+2
+;
+grid
+-
+row
+:
+3
+/
+4
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+.
+jsterm
+-
+input
+-
+container
+{
+grid
+-
+column
+:
+1
+/
+2
+;
+grid
+-
+row
+:
+-
+1
+/
+-
+2
+;
+position
+:
+relative
+;
+z
+-
+index
+:
+1
 ;
 }
 .
